--- a/AdvancedCSS/quotes/index.html
+++ b/AdvancedCSS/quotes/index.html
@@ -10,13 +10,35 @@
 <body>
   <article class="quote-box">
     <div class="quote-box__quote">
-      <quotebox>
+      <p>
         The Noblest Art is that of Making Others Happy!
-      </quotebox>
+      </p>
       <p class="quote-box__quote-author">P.T.Barnum (Entertainer)</p>
     </div>
     <div class="quote-box__author-image">
-      <img src="albert.jpeg" alt="Albert Einstein" />
+      <img src="./imgs/quotePic1.png" alt="P.T.Barnum" />
+    </div>
+  </article>
+  <article class="quote-box dark-section">
+    <div class="quote-box__quote">
+      <p>
+        Education is the difference between wishing you could help other people and being able to help them.
+      </p>
+      <p class="quote-box__quote-author">Russell M. Nelson (Latter-day Prophet)</p>
+    </div>
+    <div class="quote-box__author-image">
+      <img src="./imgs/quotePic3.png" alt="Russll M. Nelson" />
+    </div>
+  </article>
+  <article class="quote-box">
+    <div class="quote-box__quote">
+      <p>
+        You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality!
+      </p>
+      <p class="quote-box__quote-author">Walt Disney (Animator and Entrepeneur)</p>
+    </div>
+    <div class="quote-box__author-image">
+      <img src="./imgs/quotePic2.png" alt="Walt Disney" />
     </div>
   </article>
 </body>
